Fix data race while accessing _recipientCtx

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0, 7.3.0-rc4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v7.3, v7.2
    • 107
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As seen in the stack traces of BF-31930, there is a data race while reading the state of the _recipientCtx and updating the _recipientCtx.

      Locking the _mutex (as done here) before reading the state of the _recipientCtx should fix the race.

            Assignee:
            Nandini Bhartiya
            Reporter:
            Nandini Bhartiya
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: