SERVER-86894: Fix data race while accessing internal state. (#19262)

GitOrigin-RevId: 79fe6c084fa59dcfb46334a0a6e5b03389ad2bfb